tests/neg-macros/i16835/Test_2.scala
def test: Unit = foo // error
